--- a/style.css
+++ b/style.css
@@ -56,7 +56,8 @@ span {
   border: 1px solid #fff;
 }
 .container {
-  max-width: 1440px;
+  min-width: 1550px;
+  max-width: 1550px;
   margin: 0 auto;
   padding: 0 40px;
 }
@@ -70,10 +71,20 @@ header {
 }
 .header {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   position: absolute;
   left: 13%;
+}
+.header .nav-toggle {
+  display: none;
+  cursor: pointer;
+  width: 4rem;
+  height: 4rem;
+}
+.logo{
+  position: absolute;
+  left: -32%;
 }
 nav {
   margin-left: 5rem;
@@ -94,31 +105,33 @@ nav a:hover {
 
 .right-section {
   position: absolute;
-  right: 0;
+  right: -10%;
   top: 0;
   padding: 0 10px;
   display: flex;
   width: 600px;
   height: 900px;
   background: linear-gradient(180deg, #0a33f2 0%, #0224c1 100%);
+  animation: bg-change 20s linear infinite alternate forwards;
+  animation-delay:2s;
 }
 
-.right-section a,
-.right-section p {
+.right-section a{
   color: #fff;
   font-weight: 700;
   font-size: 1.2rem;
   padding: 10px;
   margin-left: 10px;
 }
-
+.right-section img {
+  margin-top:10px;
+}
 .right-section .btn-light {
-  margin-top: 5px;
   margin-left: 10%;
-  width: 303px;
-  height: 60px;
+  width: 250px;
+  height: 50px;
   font-weight: 600;
-  font-size: 23px;
+  font-size: 18px;
 }
 
 /* Home Section */
@@ -126,8 +139,7 @@ nav a:hover {
   display: flex;
   justify-content: space-between;
   position: relative;
-  margin-block-start: 3%;
-  height: 100vh;
+  margin-block-start: 4%;
 }
 .home img {
   height: 800px;
@@ -147,13 +159,13 @@ nav a:hover {
 }
 .tita-1 {
   position: absolute;
-  top: -5%;
+  top: -10%;
   right: 10%;
 }
 .tita-2 {
   position: absolute;
   top: 10%;
-  right: -10%;
+  right: -8%;
 }
 
 .home .btn-light {
@@ -177,25 +189,28 @@ nav a:hover {
   position: absolute;
 }
 .bg:first-child {
-  top: -25%;
-  left: 7%;
+  top: 0%;
+  left: 5%;
 }
 
 .vector-2 {
   position: absolute;
-  bottom: -52%;
-  left: 80%;
+  bottom: -50%;
+  left: 85%;
 }
 .manage {
   display: flex;
-  height: 100vh;
+  justify-content: center;
+  margin-block-start: 10%;
 }
 
 .manage p {
   font-size: 1.5rem;
   margin-bottom: 5%;
 }
-
+.manage-content{
+  margin-inline-start: 5%;
+}
 .manage-info {
   display: flex;
   gap: 5rem;
@@ -209,8 +224,7 @@ nav a:hover {
   display: flex;
   position: relative;
   align-items: center;
-  margin-block-start: 15%;
-  height: 100vh;
+  margin-block-start: 20%;
 }
 
 .case {
@@ -226,8 +240,8 @@ nav a:hover {
 
 .case-img {
   position: absolute;
-  top: 10%;
-  right: -16%;
+  top: -15%;
+  right: -10%;
 }
 .case h1 {
   text-align: center;
@@ -280,8 +294,8 @@ nav a:hover {
 /* Service Section */
 #service {
   position: relative;
-  height: 70vh;
-  margin-block-start: 5%;
+  margin-block-start: 20%;
+  margin-block-end: 10%;
 }
 
 .service-bg {
@@ -332,7 +346,8 @@ nav a:hover {
 .payment {
   display: flex;
   align-items: center;
-  height: 100vh;
+  margin-block-start: 10%;
+  margin-block-end: 10%;
 }
 
 .payment-intro p {
@@ -420,3 +435,165 @@ nav a:hover {
   padding: 20px 0;
 }
 /* End Footer Section */
+
+
+
+/* Animation */
+@keyframes bg-change {
+  0%{
+    background-color: #1740ff;
+  }
+  5%{
+    background-color: #3333ff;
+  }
+  10%{
+    background-color: #4d4dff;
+  }
+  15%{
+    background: hsl(205, 72%, 37%);
+  }
+  20%{
+    background:hsl(205, 63%, 48%);
+  }
+  25%{
+    background-color: #0080ff;
+  }
+  30%{
+    background-color: #49a6e9";
+  }
+  35%{
+    background-color:#1a8cff ;
+  }
+  40%{
+    background-color: hsl(205, 89%, 70%);
+  }
+  45%{
+    background-color: #3399ff;
+  }
+  50%{
+    background-color: hsl(205, 90%, 76%);
+  }
+  55%{
+    background-color: #4da6ff;
+  }
+  60%{
+    background-color: hsl(205, 86%, 81%);
+  }
+  65%{
+    background-color: #66b3ff;
+  }
+  70%{
+    background-color: #80bfff;
+  }
+  75%{
+    background-color: hsl(205, 90%, 88%);
+  }
+  80%{
+    background-color:  #cce6ff;
+  }
+  85%{
+    background-color: hsl(205, 100%, 96%);
+  }
+  90%{
+    background-color: hsl(205, 32%, 93%);
+  }
+  100%{
+    background-color: #fff;
+  }
+}
+
+
+/* Media query */
+@media (max-width:425px){
+  h1{
+    font-size: 3rem;
+  }
+  body{
+    overflow-x: hidden;
+  }
+  nav{
+    display: none;
+  }
+  .nav-toggle{
+    display: block;
+  
+  }
+  .header-logo{
+    display: flex;
+    justify-content: space-between;
+  }
+  .right-section{
+    display: none;
+  }
+  .home{
+    justify-content: center;
+    align-items: center;
+    margin:10% 0
+  }
+.tita-1,
+.tita-2{
+  display: none;
+}
+  .home-right-section img{
+    height:500px
+  }
+  .manage{
+    flex-direction: column;
+    margin-block-start: 25%;
+  }
+  .manage .manage-img{
+    display: none;
+  }
+  
+  .manage-content{
+    padding: 0 20%;
+  }
+  .case{
+    display: flex;
+    flex-direction: column;
+  }
+  .usedCase{
+    display: flex;
+    justify-content: center;
+  }
+  .usedCase .case-img{
+    display: none;
+  }
+  .service{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .service-intro{
+    width:800px;
+  }
+  .service-cards{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    padding: 5%;
+    gap:3rem;
+  }
+  .payment{
+    flex-direction: column;
+  }
+  .payment-card{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-block-end: 5%;
+  }
+  .update{
+    width: 300px;
+    height: 300px;
+    flex-direction: column;
+    justify-content: center;
+    background: none;
+    background-color: #000;
+  }
+  .footer{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  
+
+  }
+}
