--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ nav a:hover {
 
 .vector-2 {
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 78%;
 }
 .manage {
@@ -217,7 +217,7 @@ nav a:hover {
 }
 .manage-info {
   display: flex;
-  gap: 5rem;
+  gap: 3rem;
   margin-bottom: 5%;
   width: 75%;
   font-size: 20px;
@@ -519,5 +519,18 @@ nav a:hover {
   }
   100%{
       transform: translateX(0%);
+  }
+}
+
+/* Media Query */
+@media (max-width:1200px){
+  h1{
+    font-size: 3rem;
+  }
+  p{
+    font-size: 1rem;
+  }
+  .home{
+    margin-block-start: 7%;
   }
 }
