--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@ h1 {
   font-weight: 700;
   font-size: 6rem;
 }
+p {
+  font-size: 1.5rem;
+}
 span {
   color: #1740ff;
   font-weight: 700;
@@ -59,7 +62,7 @@ span {
   max-width: 1500px;
   margin: 0 auto;
   padding: 0 40px;
-  overflow-x:hidden;
+  overflow-x: hidden;
 }
 /* Header Section */
 header {
@@ -76,19 +79,12 @@ header {
   position: absolute;
   left: 13%;
 }
-.header .nav-toggle {
-  display: none;
-  cursor: pointer;
-  width: 4rem;
-  height: 4rem;
-}
-.logo{
+.logo {
   position: absolute;
   left: -32%;
+  top: 0%;
 }
-nav {
-  margin-left: 5rem;
-}
+
 nav ul {
   display: flex;
   gap: 7rem;
@@ -114,7 +110,7 @@ nav a:hover {
   background: linear-gradient(180deg, #0a33f2 0%, #0224c1 100%);
 }
 
-.right-section a{
+.right-section a {
   color: #fff;
   font-weight: 700;
   font-size: 1.2rem;
@@ -122,7 +118,7 @@ nav a:hover {
   margin-left: 10px;
 }
 .right-section img {
-  margin-top:10px;
+  margin-top: 10px;
 }
 .right-section .btn-light {
   margin-left: 10%;
@@ -142,7 +138,7 @@ nav a:hover {
 .home img {
   height: 800px;
 }
-.home-left-section{
+.home-left-section {
   animation: slideInFromLeft 1s ease-in;
 }
 .home-left-section h1 {
@@ -151,13 +147,12 @@ nav a:hover {
 
 .home-left-section p {
   font-weight: 400;
-  font-size: 20px;
   width: 514px;
 }
 
 .home-right-section {
   display: flex;
-  animation: slideInFromRight 1s ease-in;
+  
 }
 .tita-1 {
   position: absolute;
@@ -170,7 +165,7 @@ nav a:hover {
   right: -4.5%;
 }
 
-.home .btn-light {
+.home-left-section .btn-light {
   border: 1px solid #1740ff;
   width: 206px;
   height: 70px;
@@ -197,7 +192,7 @@ nav a:hover {
 
 .vector-2 {
   position: absolute;
-  top: 45%;
+  top: 40%;
   left: 78%;
 }
 .manage {
@@ -207,20 +202,21 @@ nav a:hover {
 }
 
 .manage p {
-  font-size: 1.5rem;
   margin-bottom: 5%;
 }
-.manage-content{
+.manage-content {
   margin-inline-start: 5%;
 }
 .manage-info {
   display: flex;
   gap: 3rem;
   margin-bottom: 5%;
-  width: 75%;
   font-size: 20px;
 }
-
+.manage-image {
+  margin-block-start: 5%;
+  margin-inline-start: 2%;
+}
 /* Used Case Section */
 .usedCase {
   display: flex;
@@ -251,7 +247,6 @@ nav a:hover {
 
 .cases p {
   font-weight: 700;
-  font-size: 1.5rem;
 }
 
 .case .btn {
@@ -311,12 +306,12 @@ nav a:hover {
 
 .service-intro p {
   font-weight: 500;
-  font-size: 20px;
   margin: 20px 0;
 }
 
 .service-cards {
   display: flex;
+  align-items: baseline;
 }
 
 .card {
@@ -341,6 +336,7 @@ nav a:hover {
 .card a {
   color: #1740ff;
   display: flex;
+  align-items: center;
   gap: 1rem;
 }
 
@@ -364,7 +360,7 @@ nav a:hover {
   cursor: pointer;
 }
 
-.app{
+.app {
   display: flex;
   gap: 3rem;
   padding: 10px 0;
@@ -420,56 +416,245 @@ nav a:hover {
   align-items: baseline;
   height: 50vh;
   margin-block-start: 10%;
-
 }
 
 .footer ul li a {
   font-weight: 600;
   font-size: 20px;
-  color:#000;
+  color: #000;
 }
 
-.socials{
+.socials {
   display: flex;
   gap: 2rem;
   padding: 10px 0;
 }
-.footer-logo{
+.footer-logo {
   padding: 20px 0;
 }
 /* End Footer Section */
 
-
-
 /* Animation */
 
-
 @keyframes slideInFromLeft {
-  0%{
-      transform: translateX(-100%);
+  0% {
+    transform: translateX(-100%);
   }
-  100%{
-      transform: translateX(0%);
-  }
-}
-@keyframes slideInFromRight {
-  0%{
-      transform: translateX( 100%);
-  }
-  100%{
-      transform: translateX(0%);
+  100% {
+    transform: translateX(0%);
   }
 }
-
 /* Media Query */
-@media (max-width:1200px){
-  h1{
+@media (max-width: 1400px) {
+  h1 {
     font-size: 3rem;
   }
-  p{
+  p {
+    font-size: 1.3rem;
+  }
+  nav ul {
+    gap: 5rem;
+  }
+  .btn-dark {
+    width: 250x;
+    height: 50px;
+    font-size: 1.5rem;
+  }
+  .container {
+    padding: 10px 100px;
+  }
+
+  .right-section {
+    height: 700px;
+    top: -35%;
+  }
+  .right-section .btn-light {
+    margin-block-start: 1%;
+  }
+  .home {
+    margin-block-start: 7%;
+  }
+  .home-left-section h1 {
+    font-size: 5rem;
+  }
+  .home-left-section p {
+    font-size: 1.5rem;
+  }
+  .home-left-section .btn-light {
+    height: 50px;
+    font-size: 1.5rem;
+  }
+  .tita-1 img,
+  .tita-2 img {
+    height: 600px;
+  }
+  .tita-1 {
+    right: 22%;
+  }
+  .tita-2 {
+    right: 2%;
+  }
+
+  .manage {
+    margin-block-start: 15%;
+  }
+  .manage-info {
+    margin-bottom: 0%;
+  }
+  .manage-image img {
+    height: 700px;
+  }
+
+  .bg img {
+    width: 500px;
+  }
+  .bg:first-child {
+    top: 10%;
+    left: 7%;
+  }
+  .vector-2 {
+    top: 65%;
+    left: 100%;
+  }
+  .usedCase .case-img img {
+    width: 500px;
+    height: 500px;
+  }
+
+  .case-img {
+    right:0%;
+    top: 0%;
+  }
+  
+  .service p {
+    font-size: 1.5rem;
+  }
+
+  .payment {
+    flex-direction: column;
+  }
+  .payment-card img {
+    width: 250px;
+  }
+  .payment-intro {
+    display: flex;
+    margin-inline-start: 20%;
+    justify-content: space-around;
+    align-items: baseline;
+  }
+}
+
+
+@media (max-width: 1200px) {
+  h1 {
+    font-size: 3rem;
+  }
+  p {
+    font-size: 1.3rem;
+  }
+  nav ul {
+    gap: 1rem;
+  }
+  nav ul a{
     font-size: 1rem;
   }
-  .home{
+  .btn-dark {
+    width: 250x;
+    height: 50px;
+    font-size: 1.5rem;
+  }
+  
+  .right-section {
+    height: 700px;
+    top: -35%;
+  }
+  .right-section .btn-light {
+    margin-block-start: 1%;
+  }
+  .home {
     margin-block-start: 7%;
+  }
+  .home-left-section h1 {
+    font-size: 4rem;
+    width:400px;
+  }
+  .home-left-section p {
+    font-size: 1.5rem;
+    width: 450px;
+  }
+  .home-left-section .btn-light {
+    height: 50px;
+    font-size: 1.5rem;
+    margin-right: 5%;
+  }
+  .tita-1 img,
+  .tita-2 img {
+    height: 600px;
+  }
+  .tita-1 {
+    right: 25%;
+  }
+  .tita-2 {
+    right: 3%;
+  }
+
+  .manage {
+    margin-block-start: 15%;
+  }
+  .manage-image img {
+    height: 700px;
+  }
+  .manage-image{
+    margin-inline-start: -15%;
+   }
+
+  .bg img {
+    width: 500px;
+  }
+  .bg:first-child {
+    top: 10%;
+    left: -5%;
+  }
+  .vector-2 {
+    top: 60%;
+    left: 100%;
+  }
+  .usedCase .case-img img {
+    width: 500px;
+    height: 500px;
+  }
+
+  .case-img {
+    left: 55%;
+    top: 0%;
+  }
+
+  .card {
+    padding: 20px;
+  }
+  
+  .service p {
+    font-size: 1.5rem;
+  }
+
+  .payment {
+    flex-direction: column;
+  }
+  .payment-card img {
+    width: 200px;
+  }
+  .payment-intro {
+    display: flex;
+    margin-inline-start: 20%;
+    justify-content: space-around;
+    align-items: baseline;
+  }
+
+  .update h2{
+    font-size: 2.3rem;
+  }
+
+  .footer ul li a{
+    font-size: 1.3rem;
   }
 }
